# PG_practicas_8a10

./: CMakeLists.txt  common.props  leeme.txt  pract-pg.sln
Debug/PGUPV/: PGUPV.idb
Debug/PGUPV/PGUPV.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  PGUPV.lastbuildstate
Debug/ej8-1/: vc141.idb
Debug/ej8-1/ej8-1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ej8-1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  (+1 more)
Debug/ej8-2/: vc141.idb
Debug/ej8-3/: vc141.idb
Debug/ej8-4/: vc141.idb
Debug/p10/: vc141.idb
PGUPV/: PGUPV.vcxproj  PGUPV.vcxproj.filters  app.cpp  assimpWrapper.cpp  boundingVolumes.cpp  bufferRenderer.cpp  camera.cpp  drawCommand.cpp  fileChooserWidget.cpp  fileLoader.cpp  floatSliderWidget.cpp  hacks.cpp  image.cpp  lineChartWidget.cpp  material.cpp  mesh.cpp  node.cpp  properties.cpp  scene.cpp  scenegraphEditor.cpp  texture2DGeneric.cpp  vecSliderWidget.cpp
PGUPV/include/: GUI3.h  PGUPV.h  assimpWrapper.h  boundingVolumes.h  camera.h  common.h  eventProcessor.h  floatSliderWidget.h  image.h  lightSourceWidget.h  material.h  mesh.h  multiListBoxWidget.h  node.h  scene.h  sceneGraphEditor.h  texture2DGeneric.h  value.h
ej8-1/: CMakeLists.txt  ej8-1.vcxproj  imgui.ini  log.txt  main.cpp
ej8-2/: CMakeLists.txt  ej8-2.vcxproj  imgui.ini  log.txt  main.cpp
ej8-3/: CMakeLists.txt  ej8-3.vcxproj  imgui.ini  log.txt  main.cpp
ej8-4/: CMakeLists.txt  ej8-4.vcxproj  log.txt  main.cpp
ej9-1/: CMakeLists.txt  ej9-1.vcxproj  imgui.ini  log.txt  main.cpp
ej9-2/: CMakeLists.txt  ej9-2.vcxproj  imgui.ini  log.txt  main.cpp
ej9-3/: CMakeLists.txt  ej9-3.vcxproj  imgui.ini  log.txt  main.cpp
librerias/guipg/: CMakeLists.txt  guipg.cpp  guipg.vcxproj
p10/: imgui.ini  log.txt  main.cpp  p10.frag  p10.vcxproj  p10.vert  properties.ini
p8/: log.txt  main.cpp  p8.vcxproj  shader.frag  shader.tesc  shader.tese  shader.vert
p9/: imgui.ini  log.txt  main.cpp  p9.frag  p9.vcxproj  p9.vert  properties.ini
recursos/modelos/: teapot.pgmat
(+65 files in other folders)
